Stop hiding subscribe link on mobile

--- a/src/components/PodcastPost/podcast-post.module.css
+++ b/src/components/PodcastPost/podcast-post.module.css
@@ -52,8 +52,7 @@
 }
 
 @media (--phone-only) {
-  .downloadLink,
-  .subscribeLink {
+  .downloadLink {
     display: none;
   }
 }
